--- a/Chat.html
+++ b/Chat.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<meta charset="UTF-8">
-<div class="chatsend"></div>
+<div class="chatsend"></div> //入力欄
 
-<div class="chatlist"></div>
-<script>
-  const urlParams = new URLSearchParams(window.location.search);
-  const idValue = urlParams.get('id');
-</script>
+<div class="chatlist"></div> //出力欄
+<script>var idValue = 'ID';</script>//取得したIDを入力してください。
 <script src="https://raw.githubusercontent.com/hirotomoki12345/Chatcode/main/chat.js"></script>
+
