--- a/source/example.html
+++ b/source/example.html
@@ -1,2 +1,4 @@
-    <div class="chatlist"></div>
-    <div class="chatsend"></div>
+<script src="https://raw.githubusercontent.com/hirotomoki12345/Chatcode/main/source/chat.js"></script>
+
+<div class="chatlist"></div>
+<div class="chatsend"></div>
