--- a/source/example.html
+++ b/source/example.html
@@ -1,4 +1,5 @@
-<script src="https://raw.githubusercontent.com/hirotomoki12345/Chatcode/main/source/chat.js"></script>
+<script>const id = "your IDs"</script>
+<script src="https://raw.githubusercontent.com/hirotomoki12345/Chatcode/main/source/set.js"></script>
 
 <div class="chatlist"></div>
 <div class="chatsend"></div>
