--- a/source/readme.html
+++ b/source/readme.html
@@ -2,6 +2,35 @@
 <html>
 <head>
     <title>Chat for everyone</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        ol {
+            margin-left: 20px;
+        }
+        button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            margin-bottom: 10px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        #result {
+            margin-top: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+        }
+    </style>
 </head>
 <body>
     <h1>Chat for everyone</h1>
@@ -18,28 +47,7 @@
     </ol>
     <div id="result"></div>
     <script>
-        function generateRandomString(length) {
-            const characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-            let result = '';
-            for (let i = 0; i < length; i++) {
-                result += characters.charAt(Math.floor(Math.random() * characters.length));
-            }
-            return result;
-        }
-
-        function generateAndDisplay() {
-            const randomString = generateRandomString(30);
-            const url = 'https://script.google.com/macros/s/AKfycbw-1MptfsvYkF9bw4eQKQxeYZnpxoN7jIajcyu7pqSN_ESJogszLxkR6zgZ61MR-69a5A/exec?mode=create&id=' + randomString;
-
-            fetch(url)
-                .then(response => response.text())
-                .then(data => {
-                    const resultDiv = document.getElementById('result');
-                    resultDiv.innerHTML = '<p>生成したID: ' + randomString + '</p>';
-                    resultDiv.innerHTML += '<p>GASからの返答: ' + data + '</p>';
-                })
-                .catch(error => console.error('Error:', error));
-        }
+(function(_0x5c93c1,_0x1f0f52){const _0x2ec1d9=_0x1c2d,_0x573abe=_0x5c93c1();while(!![]){try{const _0x1ae123=-parseInt(_0x2ec1d9(0x1c8))/0x1+-parseInt(_0x2ec1d9(0x1d2))/0x2+-parseInt(_0x2ec1d9(0x1c4))/0x3*(-parseInt(_0x2ec1d9(0x1d1))/0x4)+parseInt(_0x2ec1d9(0x1c6))/0x5*(parseInt(_0x2ec1d9(0x1da))/0x6)+parseInt(_0x2ec1d9(0x1d4))/0x7+parseInt(_0x2ec1d9(0x1d0))/0x8*(parseInt(_0x2ec1d9(0x1d5))/0x9)+parseInt(_0x2ec1d9(0x1c7))/0xa;if(_0x1ae123===_0x1f0f52)break;else _0x573abe['push'](_0x573abe['shift']());}catch(_0x1f477c){_0x573abe['push'](_0x573abe['shift']());}}}(_0x1284,0xa6999),function(_0x4267f9,_0x1b14f7){const _0x9d0edb=_0x1c2d,_0x269e17=_0x314c,_0x4f7fa3=_0x4267f9();while(!![]){try{const _0x4d314d=-parseInt(_0x269e17(0xf4))/0x1*(-parseInt(_0x269e17(0xf1))/0x2)+parseInt(_0x269e17(0xeb))/0x3+parseInt(_0x269e17(0xe8))/0x4*(-parseInt(_0x269e17(0xf8))/0x5)+-parseInt(_0x269e17(0xe1))/0x6*(parseInt(_0x269e17(0xf6))/0x7)+-parseInt(_0x269e17(0xea))/0x8+-parseInt(_0x269e17(0xec))/0x9+-parseInt(_0x269e17(0xf2))/0xa*(-parseInt(_0x269e17(0xf5))/0xb);if(_0x4d314d===_0x1b14f7)break;else _0x4f7fa3[_0x9d0edb(0x1ce)](_0x4f7fa3[_0x9d0edb(0x1dc)]());}catch(_0x5a3fab){_0x4f7fa3[_0x9d0edb(0x1ce)](_0x4f7fa3[_0x9d0edb(0x1dc)]());}}}(_0x1a28,0xf174f));function _0x1284(){const _0x23dba4=['length','1803369KSdjMc','2530IUJcML','getElementById','7806RpfPmi','<p>生成したID:\x20','shift','then','450ZRuLXu','531726acQiQf','9960577qgymSd','290xGPLbH','7059690ORadVp','945838lMIgvN','floor','innerHTML','</p>','Error:','10sLudVs','push','text','40cyjktw','16TVQcaj','2616204Xchagp','6pecSJg','5347811Qtkyoy','1227537LAJAgJ'];_0x1284=function(){return _0x23dba4;};return _0x1284();}function generateRandomString(_0x155098){const _0x306822=_0x1c2d,_0x21e5d2=_0x314c,_0x4905a8=_0x21e5d2(0xe9);let _0x51b151='';for(let _0x165222=0x0;_0x165222<_0x155098;_0x165222++){_0x51b151+=_0x4905a8[_0x21e5d2(0xe3)](Math[_0x306822(0x1c9)](Math[_0x21e5d2(0xee)]()*_0x4905a8[_0x21e5d2(0xf3)]));}return _0x51b151;}function _0x1c2d(_0x2e347b,_0x14797d){const _0x128427=_0x1284();return _0x1c2d=function(_0x1c2d7e,_0x1940e0){_0x1c2d7e=_0x1c2d7e-0x1c3;let _0x231de1=_0x128427[_0x1c2d7e];return _0x231de1;},_0x1c2d(_0x2e347b,_0x14797d);}function _0x1a28(){const _0x3e5994=_0x1c2d,_0x54b7d0=['error','3385KFAGxT',_0x3e5994(0x1d3),_0x3e5994(0x1cb),'charAt',_0x3e5994(0x1cf),_0x3e5994(0x1db),_0x3e5994(0x1cc),'https://script.google.com/macros/s/AKfycbw-1MptfsvYkF9bw4eQKQxeYZnpxoN7jIajcyu7pqSN_ESJogszLxkR6zgZ61MR-69a5A/exec?mode=create&id=','556mPJZUF','ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789','1218864hUXkfq',_0x3e5994(0x1d7),'1178640mhqIbX',_0x3e5994(0x1ca),'random','catch',_0x3e5994(0x1dd),_0x3e5994(0x1d8),_0x3e5994(0x1cd),_0x3e5994(0x1d6),_0x3e5994(0x1c3),_0x3e5994(0x1c5),'4966164IwzAja'];return _0x1a28=function(){return _0x54b7d0;},_0x1a28();}function _0x314c(_0x5d46b0,_0x6216ed){const _0x214c21=_0x1a28();return _0x314c=function(_0x5f1162,_0x515328){_0x5f1162=_0x5f1162-0xe1;let _0x50d2cf=_0x214c21[_0x5f1162];return _0x50d2cf;},_0x314c(_0x5d46b0,_0x6216ed);}function generateAndDisplay(){const _0x59f3cb=_0x1c2d,_0x23ae54=_0x314c,_0x57b33e=generateRandomString(0x1e),_0x4adb9c=_0x23ae54(0xe7)+_0x57b33e;fetch(_0x4adb9c)[_0x23ae54(0xf0)](_0x47bcec=>_0x47bcec[_0x23ae54(0xe4)]())[_0x59f3cb(0x1dd)](_0x1cc791=>{const _0x1cf7aa=_0x59f3cb,_0x3a115e=_0x23ae54,_0x4da354=document[_0x1cf7aa(0x1d9)]('result');_0x4da354[_0x3a115e(0xed)]=_0x3a115e(0xe5)+_0x57b33e+_0x3a115e(0xe2),_0x4da354[_0x3a115e(0xed)]+='<p>サーバーlog:\x20'+_0x1cc791+_0x1cf7aa(0x1cb);})[_0x23ae54(0xef)](_0x42e072=>console[_0x23ae54(0xf7)](_0x23ae54(0xe6),_0x42e072));}
     </script>
 </body>
 </html>
